# sim_log_azot

./: .gitignore  Cargo.toml  QUICK_START.md  README.md  example_file_logger.rs
logger/: Cargo.toml
logger/src/: lib.rs  sub_func.rs
logger_derive/: Cargo.toml
logger_derive/src/: lib.rs
test_app/: Cargo.toml
test_app/src/: example_file_logger.rs  main.rs
